# fastbreak

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  context7.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: api-schema-check.yaml  ci.yaml  publish.yaml
docs/: client.md  clutch.md  compare.md  defense.md  endpoints.md  estimated.md  game_finder.md  games.md  getting-started.md  gotchas.md  hot_hand.md  index.md  lineups.md  matchups.md  metrics.md  models.md  players.md  projections.md  rotations.md  schedule.md  seasons.md  shots.md  splits.md  standings.md  teams.md  tracking.md  transition.md  types.md
examples/: README.md  betting.py  boxscores.py  clutch.py  compare_players.py  defense.py  estimated.py  four_factors.py  game_finder.py  game_ids.py  games.py  gravity.py  hot_hand.py  lineups.py  matchups.py  metrics.py  model_eval.py  play_by_play.py  player_advanced.py  player_lookup.py  player_stats.py  player_trends.py  projections.py  rapm.py  rotations.py  schedule.py  seasons.py  shots.py  splits.py  standings.py  team_advanced.py  team_lookup.py  team_stats.py  test.py  three_two_one.py  todays_games.py  tracking.py  transition.py
scripts/: compute_projection_priors.py
src/fastbreak/: __init__.py  betting.py  clutch.py  compare.py  defense.py  enums.py  estimated.py  game_finder.py  games.py  hot_hand.py  league.py  lineups.py  logging.py  matchups.py  metrics.py  model_eval.py  players.py  projections.py  projections_priors.py  rapm.py  rotations.py  schedule.py  seasons.py  shots.py  splits.py  standings.py  teams.py  tracking.py  transition.py  types.py  utils.py
src/fastbreak/clients/: __init__.py  base.py  nba.py  wnba.py
src/fastbreak/endpoints/: __init__.py  all_time_leaders.py  assist_leaders.py  assist_tracker.py  base.py  box_score_advanced.py  box_score_defensive.py  box_score_four_factors.py  box_score_hustle.py  box_score_matchups.py  box_score_misc.py  box_score_player_track.py  box_score_scoring.py  box_score_summary.py  box_score_traditional.py  box_score_traditional_v2.py  box_score_usage.py  box_scores_v3.py  common_all_players.py  common_player_info.py  common_playoff_series.py  common_team_roster.py  common_team_years.py  cume_stats_player.py  cume_stats_player_games.py  cume_stats_team.py  cume_stats_team_games.py  draft_combine_drill_results.py  draft_combine_nonstationary_shooting.py  draft_combine_player_anthro.py  draft_combine_spot_shooting.py  draft_combine_stats.py  draft_history.py  dunk_score_leaders.py  franchise_history.py  franchise_leaders.py  franchise_players.py  game_rotation.py  gravity_leaders.py  homepage_leaders.py  (+94 more)
src/fastbreak/models/: __init__.py  advanced_statistics.py  all_time_leaders.py  assist_leaders.py  assist_tracker.py  box_score_advanced.py  box_score_advanced_v3.py  box_score_defensive.py  box_score_four_factors.py  box_score_four_factors_v3.py  box_score_hustle.py  box_score_matchups.py  chart.py  (+141 more)
tests/: conftest.py  strategies.py  test_api_schema.py  test_betting.py  test_clutch.py  test_compare.py  test_compare_properties.py  test_defense.py  test_estimated.py  test_game_finder.py  test_games.py  test_games_box_scores.py  test_hot_hand.py  test_lineups.py  test_logging.py  test_matchups.py  test_metrics.py  test_metrics_properties.py  test_model_eval.py  test_models_properties.py  test_players.py  test_projections.py  test_projections_live.py  test_rapm.py  test_rotations.py  test_schedule.py  test_seasons.py  test_shots.py  test_splits.py  test_standings.py  test_synergy_warning.py  test_teams.py  test_tracking.py  test_transition.py  test_types.py  test_utils.py
tests/clients/: test_nba.py
tests/endpoints/: test_all_time_leaders.py  test_assist_leaders.py  test_assist_tracker.py  test_base.py  test_box_score_defensive.py  test_box_score_hustle.py  test_box_score_traditional_v2.py  test_box_scores.py  test_common_all_players.py  test_common_player_info.py  test_common_playoff_series.py  test_common_team_roster.py  test_common_team_years.py  test_cume_stats_player.py  test_cume_stats_player_games.py  test_cume_stats_team.py  test_cume_stats_team_games.py  test_draft_combine_drill_results.py  test_draft_combine_nonstationary_shooting.py  test_draft_combine_player_anthro.py  test_draft_combine_spot_shooting.py  test_draft_combine_stats.py  test_draft_history.py  test_dunk_score_leaders.py  test_franchise_history.py  test_franchise_leaders.py  test_franchise_players.py  test_game_rotation.py  test_gravity_leaders.py  test_homepage_endpoints.py  test_hustle_stats_boxscore.py  test_infographic_fanduel_player.py  test_ist_standings.py  test_league_dash_lineups.py  test_league_dash_player_clutch.py  test_league_dash_player_pt_shot.py  test_league_dash_player_shot_locations.py  test_league_dash_player_stats.py  test_league_dash_pt_defend.py  test_league_dash_pt_stats.py  (+73 more)
tests/models/: test_all_time_leaders.py  test_assist_leaders.py  test_assist_tracker.py  test_box_score_matchups.py  test_box_score_v3_optional_stats.py  test_common_all_players.py  test_common_player_info.py  test_common_playoff_series.py  test_common_team_roster.py  test_common_team_years.py  test_cume_stats_player.py  test_cume_stats_player_games.py  test_cume_stats_team.py  test_cume_stats_team_games.py  test_dataframe.py  test_draft_combine_drill_results.py  test_draft_combine_models.py  test_draft_history.py  test_franchise_leaders.py  test_franchise_players.py  test_game_rotation.py  test_league_dash_lineups.py  test_league_dash_player_clutch.py  test_league_dash_player_stats.py  test_league_dash_pt_stats.py  test_league_dash_team_clutch.py  test_league_dash_team_shot_locations.py  test_league_dash_team_stats.py  test_league_season_matchups.py  test_league_standings.py  test_leverage_leaders.py  test_matchups_rollup.py  test_non_tabular_parsing.py  test_play_by_play.py  test_player_awards.py  test_player_career_by_college.py  test_player_career_by_college_rollup.py  test_player_estimated_metrics.py  test_player_track_validation.py  test_remaining_models.py  (+21 more)
(+24 files in other folders)
