[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastbreak"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Reid Hochstedler", email = "reidhoch@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiodns>=4.0",
    "aiohttp>=3.13",
    "pydantic>=2.12",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/fastbreak/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastbreak"]
artifacts = ["src/fastbreak/py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
exclude = ["tests/**/*"]
select = ["ALL"]
ignore = ["D", "E501", "N815"]

[tool.ruff.lint.isort]
known-first-party = ["fastbreak"]
force-single-line = false
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.isort]
profile = "black"
known_first_party = ["fastbreak"]
line_length = 88
force_single_line = false
combine_as_imports = true
src_paths = ["src", "tests"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "ruff>=0.14",
]
