[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastbreak"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Reid Hochstedler", email = "reidhoch@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiodns>=4.0",
    "aiohttp>=3.13",
    "pydantic>=2.12",
    "structlog>=25.0",
    "tenacity>=8.0",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/fastbreak/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastbreak"]
artifacts = ["src/fastbreak/py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
exclude = ["src/fastbreak/_version.py"]

[tool.ruff.lint]
exclude = ["tests/**/*", "src/fastbreak/_version.py"]
select = ["ALL"]
ignore = ["COM812", "D", "E501", "N815"]

[tool.ruff.lint.per-file-ignores]
"example.py" = ["T201"]  # Allow print in example file

[tool.ruff.lint.isort]
known-first-party = ["fastbreak"]
force-single-line = false
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polars", "polars.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_first_party = ["fastbreak"]
line_length = 88
force_single_line = false
combine_as_imports = true
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "ruff>=0.14",
]
pandas = ["pandas>=3.0.0", "pandas-stubs>=2.3.3.260113"]
polars = ["polars>=1.37.1"]
